# UniversalConverter-AppWindows

./: .gitignore  build.bat  package-lock.json  package.json
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  conversion_engine.rs  lib.rs  main.rs  office_engine.rs  pdf_engine.rs  text_engine.rs
src/components/: FileList.tsx  FileUploader.tsx  History.tsx  MergePDF.tsx  MergePromptModal.tsx
