[package]
name = "universalconverter"
version = "1.4.0"
description = "Universal File Converter"
authors = ["Momo"]
edition = "2021"

[lib]
name = "universalconverter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"

# Images raster (PNG, JPG, WEBP, BMP, GIF, TIFF, ICO, TGA, PNM, HDR, AVIF)
image = { version = "0.25", features = [
    "png", "jpeg", "webp", "bmp", "gif", "tiff", "ico", "tga",
    "pnm", "hdr", "avif"
] }

# PDF
lopdf    = "0.33"
printpdf = "0.7"

# SVG → raster (pure Rust)
resvg = "0.44"

# Markdown → HTML / TXT
pulldown-cmark = "0.11"

# Office : lecture ZIP (DOCX, PPTX, XLSX sont des archives ZIP)
zip = "2"

# Office : parsing XML interne (DOCX, PPTX)
quick-xml = "0.36"

# Office : lecture Excel (XLS, XLSX, ODS)
calamine = "0.26"

# Office : écriture XLSX
rust_xlsxwriter = "0"

# CSV
csv = "1"
